[package]
name = "range-overlap"
version = "0.0.1"
edition = "2021"
authors = ["Joshua Laughner <jllacct119@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/joshua-laughner/range-overlap-rs"
repository = "https://github.com/joshua-laughner/range-overlap-rs"
readme = "README.md"
description = "Determine if and how two ranges of values overlap."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
